Polished backend setup with fixed package.json and tsconfig

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,28 +1,11 @@
 {
   "compilerOptions": {
-    /* File Layout */
-    "rootDir": "./src",
-    "outDir": "./dist",
-
-    /* Environment Settings */
-    "target": "ES2020",              // Modern JS features
-    "module": "CommonJS",            // Node.js backend uses CommonJS
-    "lib": ["ES2020"],               // Standard library
-    "types": ["node"],               // Node.js type definitions
-
-    /* Other Outputs */
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-
-    /* Stricter Typechecking Options */
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    /* Recommended Options */
+    "target": "ES2020",
+    "module": "CommonJS",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true,         // Allow default imports from CommonJS
-    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
   },
   "include": ["src"],
