--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "license": "ISC",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
@@ -12,28 +14,20 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
-    "prisma": "^5.19.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
-    "eslint": "^9.39.1",
-    "globals": "^16.5.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.1"
-  },
-  "main": "dist/index.js",
-  "license": "ISC"
+    "typescript": "^5.9.3"
+  }
 }
