--- a/backend/package.json
+++ b/backend/package.json
@@ -30,5 +30,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "prisma": "^5.19.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
