--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,10 @@
     "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
+    "@types/pg": "^8.15.6",
+    "prisma": "^5.19.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "prisma": "^5.19.0"
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": "18.x"
