--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.555.0",
-    "next": "^16.0.7",
+    "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.5.1",
