--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,9 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]  
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
