--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,8 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node"]  
+    "forceConsistentCasingInFileNames": true 
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
