Fix Render deployment configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "license": "ISC",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "build": "npx prisma generate && tsc",
     "start": "node dist/index.js",
+    "postinstall": "npx prisma generate",
     "fix-db": "node fix-database.js && npx prisma generate",
-    "migrate": "npx prisma migrate dev",
+    "migrate": "npx prisma migrate deploy",
     "generate": "npx prisma generate"
   },
   "dependencies": {
