--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npx prisma generate && npm run build
+    buildCommand: npm install && npx prisma db push --accept-data-loss && npx prisma generate && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
